--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,7 @@ on:
 
 env:
   FOUNDRY_PROFILE: ci
+  MAINNET_RPC_URL: "https://mainnet.infura.io/v3/1df40ac1020e4a9083b81e1e7c6892be"
 
 jobs:
   check:
@@ -36,10 +37,10 @@ jobs:
 
       - name: Run Forge build
         run: |
-          forge build --sizes
+          forge build --via-ir
         id: build
 
       - name: Run Forge tests
         run: |
-          forge test -vvv
+          forge test -vv --via-ir
         id: test
